src/test/test-models/bad/reserved/row_vector.stan
data {
  real row_vector;
}
model {
}
